app/styles/components/bc-title.scss
.bc-title {
	@include bc-box-sizing;
	width: 100%;
	height: auto;
	padding: 48px 0 56px;

	& > header {
		width: 100%;
		height: 48px;
		margin: -48px 0 0;
		border-bottom: 2px solid $bc-color-8;
		font: 21px/48px $ft-bold;

		& > span {
			height: 100%;
			float: left;
			color: $bc-color-8;
			font: 21px/48px $ft-bold;
		}

		& > a {
			height: 36px;
			margin: 12px 0 0;
			float: right;
			color: $bc-color-1;
			font: 13px/36px $ft-norm;
		}


	}

	section {
		width: 100%;
		height: auto;
		padding: 20px 0 0;
		overflow: auto;

		& > textarea {
			width: 100%;
		}
	}

	&.red {
		border-color: $bc-color-9;

		& > header {
			& > span {
				color: $bc-color-9;
			}
		}
	}
}

